# graph-rag-workshop

./: .env.example  README.md  construct_graph.py  crud.py  docker-compose.yml  graph_rag.py  hybrid_rag.py  prompts.py  pyproject.toml  requirements.txt  vector_rag.py
data/blackrock/: fink_1.txt
